# kover

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  automoc  cd-text.1.in  cddb-id.1.in  cddb_fill.cpp  config.cache  config.h  config.h.cmake  config.h.in  config.status  configure  configure.in  configure.in.in  kover.1  kover.1.in  kover.kdevprj  kover.lsm  kover.prj  kover.spec.in  koverui.rc  libtool  subst
.github/workflows/: build.yml  markdown-lint.yml
admin/: Makefile  Makefile.in  acinclude.m4.in  acinclude.m4.in.gcc  am_edit  cvs.sh  ltcf-c.sh  ltcf-cxx.sh  ltcf-gcj.sh  ltmain.sh  mkinstalldirs
getcover/: CMakeLists.txt  getcover.c  plugin.c
kover/: 1.kover  CDDB.cpp  CDDB.h  CDView.cpp  CDView.cpp~  CDView.h  CDView.h~  CDView.moc.cpp  KoverTop.cpp  KoverTop.cpp~  KoverTop.h  KoverTop.h~  KoverTop.moc.cpp  Makefile  Makefile.am  Makefile.in  PreferencesDialog.cc  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.moc.cpp  categories.cc  categories.h  cd-text.cc  cddb-id.cc  cddb.cc  cddb.h  cddb_211_item.cc  cddb_211_item.h  cddb_fill.cc  cddb_fill.cpp  cddb_fill.cpp~  cddb_fill.h  cddb_fill.moc.cpp  cdrom.cc  cdrom.h  cdrom_cddb.cc  cdrom_cddb.h  cdtext.cc  cdtext.h  cdview.cc  (+47 more)
kover/docs/: Makefile  Makefile.in
kover/docs/en/: Makefile  Makefile.in  index.sgml
kover/pics/: Makefile.am
kover/templates/: header_template
kover/test/: base64decode.c  base64encode.c  digcalc.c  digcalc.h  digest.c
po/: CMakeLists.txt  de.po  es.po  fr.po  it.po  kover.pot  nb.po  no.po  pl.po
src/: CMakeLists.txt  PreferencesDialog.h  categories.cc  categories.h  cddb_211_item.cc  cddb_211_item.h  cddb_fill.cc  cddb_fill.h  cdview.cc  cdview.h  config.cc  directory.cc  filemode.cc  filemode.h  globals.h  id.cc  id.h  imagedlg.cc  imagedlg.h  inexact_dialog.cc  inexact_dialog.h  kover.cpp  kover.desktop  kover.h  kover.kcfg  kover_config.cc  kover_config.h  kover_global.h  kover_old.h  koverconfig.h  koverfile.cpp  koverfile.h  kovertop.cc  kovertop.h  koverui.rc  koverview.cpp  koverview.h  koverview_base.ui  main.cpp  no_qobject.h  (+17 more)
src/icons/: CMakeLists.txt
