# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

AC_CANONICAL_SYSTEM 
AC_ARG_PROGRAM

AC_ISC_POSIX

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(kover, 0.8.3) dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files

ALL_LINGUAS="de fr"

AM_KDE_WITH_NLS

AC_PATH_KDE

dnl Perform program name transformation
AC_ARG_PROGRAM

dnl KDE_CHECK_THREADING

dnl Image readers/writers
KDE_CHECK_KIMGIO
 

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h stdlib.h paths.h linux/cdrom.h linux/ucdrom.h)
AC_CHECK_FUNCS(usleep)
dnl KDE_FIND_PATH(iptables, IPTABLES, $PATH, AC_MSG_ERROR([No iptables found.]))

dnl
dnl i18n
dnl

dnl ALL_LINGUAS="de"

dnl AM_GNU_GETTEXT


KDE_CREATE_SUBDIRSLIST

AC_ARG_ENABLE(debug,    [  --enable-debug          enable debug output. [default=no] ])

if test "$enable_debug" = yes; then
        AC_DEFINE(ENABLE_DEBUG_OUTPUT)
        echo checking if debug output is enabled... yes
else
	echo checking if debug output is enabled... no
fi


echo checking for good CDs in your shelf... yes

AC_OUTPUT( \
Makefile \
kover/Makefile \
kover/pics/Makefile \
po/Makefile \
kover.spec \
)
